Updated the index.html  with new input fields amd added  some styling

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <div><img src="/Screenshot_20210621-072634_WhatsApp.jpg" alt="Hello world image"></div>
 <p>This is the first file in my new Git Repo.</p>
 <p>A new line in our file!</p>
+<input type="text" placeholder="This is a placeholder">
+<input type="submit">
 
 </body>
 </html>
