--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <p>A new line in our file!</p>
 <input type="text" placeholder="This is a placeholder">
 <input type="submit">
+ <button>Sign up</button>
 
 </body>
 </html>
